--- a/src/app/pages/adding-on-search-fail/adding-on-search-fail.page.html
+++ b/src/app/pages/adding-on-search-fail/adding-on-search-fail.page.html
@@ -26,7 +26,7 @@
         </ion-label>
       </ng-template>
       <ng-template ionicSelectableAddItemTemplate let-port="item">
-        <form [formGroup]="portForm" novalidate>
+        <form [formGroup]="portForm">
           <ion-list>
             <ion-list-header>
               Add Port
