--- a/src/app/pages/labels/labels.page.html
+++ b/src/app/pages/labels/labels.page.html
@@ -13,34 +13,85 @@
     </ion-label>
   </ion-item>
   <ion-item-group>
-    <ion-list-header color="light">Normal</ion-list-header>
+    <ion-list-header color="light">Empty</ion-list-header>
     <ion-item>
-      <ion-label>Port</ion-label>
-      <ionic-selectable #portComponent1 [(ngModel)]="port" itemValueField="id"
+      <ionic-selectable [(ngModel)]="portEmpty" itemValueField="id"
         itemTextField="name" [items]="ports" [canClear]="true">
       </ionic-selectable>
+    </ion-item>
+    <ion-item>
+      <ion-select [(ngModel)]="portEmptyNative">
+        <ion-select-option [value]="ports[0].id">{{ports[0].name}}</ion-select-option>
+        <ion-select-option [value]="ports[1].id">{{ports[1].name}}</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </ion-item-group>
+  <ion-item-group>
+    <ion-list-header color="light">Default</ion-list-header>
+    <ion-item>
+      <ion-label>Port</ion-label>
+      <ionic-selectable [(ngModel)]="portDefault" itemValueField="id"
+        itemTextField="name" [items]="ports" [canClear]="true">
+      </ionic-selectable>
+    </ion-item>
+    <ion-item>
+      <ion-label>Port</ion-label>
+      <ion-select [(ngModel)]="portDefaultNative">
+        <ion-select-option [value]="ports[0].id">{{ports[0].name}}</ion-select-option>
+        <ion-select-option [value]="ports[1].id">{{ports[1].name}}</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </ion-item-group>
+  <ion-item-group>
+    <ion-list-header color="light">Fixed</ion-list-header>
+    <ion-item>
+      <ion-label position="fixed">Port</ion-label>
+      <ionic-selectable [(ngModel)]="portFixed" itemValueField="id"
+        itemTextField="name" [items]="ports" [canClear]="true">
+      </ionic-selectable>
+    </ion-item>
+    <ion-item>
+      <ion-label position="fixed">Port</ion-label>
+      <ion-select [(ngModel)]="portFixedNative">
+        <ion-select-option [value]="ports[0].id">{{ports[0].name}}</ion-select-option>
+        <ion-select-option [value]="ports[1].id">{{ports[1].name}}</ion-select-option>
+      </ion-select>
     </ion-item>
   </ion-item-group>
   <ion-item-group>
     <ion-list-header color="light">Stacked</ion-list-header>
     <ion-item>
       <ion-label position="stacked">Port</ion-label>
-      <ionic-selectable #portComponent2 [(ngModel)]="portStacked"
-        itemValueField="id" itemTextField="name" [items]="ports" [canClear]="true">
+      <ionic-selectable [(ngModel)]="portStacked" itemValueField="id"
+        itemTextField="name" [items]="ports" [canClear]="true">
       </ionic-selectable>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">Port</ion-label>
+      <ion-select [(ngModel)]="portStackedNative">
+        <ion-select-option [value]="ports[0].id">{{ports[0].name}}</ion-select-option>
+        <ion-select-option [value]="ports[1].id">{{ports[1].name}}</ion-select-option>
+      </ion-select>
     </ion-item>
   </ion-item-group>
   <ion-item-group>
     <ion-list-header color="light">Floating</ion-list-header>
     <ion-item>
       <ion-label position="floating">Port</ion-label>
-      <ionic-selectable #portComponent3 [(ngModel)]="portFloating"
-        itemValueField="id" itemTextField="name" [items]="ports" [canClear]="true">
+      <ionic-selectable [(ngModel)]="portFloating" itemValueField="id"
+        itemTextField="name" [items]="ports" [canClear]="true">
       </ionic-selectable>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Port</ion-label>
+      <ion-select [(ngModel)]="portFloatingNative">
+        <ion-select-option [value]="ports[0].id">{{ports[0].name}}</ion-select-option>
+        <ion-select-option [value]="ports[1].id">{{ports[1].name}}</ion-select-option>
+      </ion-select>
     </ion-item>
   </ion-item-group>
   <ion-item>
-    <ion-button (click)="portComponent1.clear(); portComponent2.clear(); portComponent3.clear();">
+    <ion-button (click)="clear()">
       Clear
     </ion-button>
   </ion-item>
