Fix a gap between top bar and no items found message.

--- a/src/app/components/ionic-selectable/ionic-selectable-page.component.html
+++ b/src/app/components/ionic-selectable/ionic-selectable-page.component.html
@@ -35,7 +35,7 @@
     <div class="ionic-selectable-spinner-background"></div>
     <ion-spinner></ion-spinner>
   </div>
-  <ion-list no-margin *ngIf="!selectComponent.hasVirtualScroll && selectComponent._filteredGroups.length">
+  <ion-list no-margin *ngIf="!selectComponent.hasVirtualScroll && selectComponent._hasFilteredItems">
     <ion-item-group *ngFor="let group of selectComponent._filteredGroups" class="ionic-selectable-group">
       <ion-item-divider *ngIf="selectComponent._hasGroups" [color]="selectComponent.groupColor ? selectComponent.groupColor : null">
         <!-- Need span for for text ellipsis. -->
@@ -87,7 +87,7 @@
     </ion-item-group>
   </ion-list>
   <!-- Fail text should be above InfiniteScroll to avoid a gap when no items are found. -->
-  <div *ngIf="!selectComponent._filteredGroups.length || !selectComponent._filteredGroups[0].items.length">
+  <div *ngIf="!selectComponent._hasFilteredItems">
     <span *ngIf="selectComponent.searchFailTemplate" [ngTemplateOutlet]="selectComponent.searchFailTemplate">
     </span>
     <div *ngIf="!selectComponent.searchFailTemplate" margin>
@@ -98,7 +98,7 @@
     (ionInfinite)="_getMoreItems($event)">
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
   </ion-infinite-scroll>
-  <ion-virtual-scroll no-margin *ngIf="selectComponent.hasVirtualScroll && selectComponent._filteredGroups.length"
+  <ion-virtual-scroll no-margin *ngIf="selectComponent.hasVirtualScroll && selectComponent._hasFilteredItems"
     [items]="selectComponent._filteredGroups[0].items" [headerFn]="selectComponent.virtualScrollHeaderFn"
     [approxItemHeight]="selectComponent.virtualScrollApproxItemHeight">
     <ion-item-divider *virtualHeader="let header" [color]="selectComponent.groupColor ? selectComponent.groupColor : null">
