Correct DisabledIems page.

--- a/src/app/pages/disabling-items/disabling-items.page.html
+++ b/src/app/pages/disabling-items/disabling-items.page.html
@@ -33,4 +33,9 @@
       [disabledItems]="disabledDischargingPorts">
     </ionic-selectable>
   </ion-item>
+  <ion-item>
+    <ion-button (click)="clear()">
+      Clear
+    </ion-button>
+  </ion-item>
 </ion-content>
