Add footer template page.

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -87,6 +87,9 @@
       <ion-item detail="true" href="/close-button-template">
         Close button template
       </ion-item>
+      <ion-item detail="true" href="/footer-template">
+        Footer template
+      </ion-item>
       <ion-item detail="true" href="/group-template">
         Group template
       </ion-item>
